# price-paid

./: README.md
house_prices/: Cargo.toml
house_prices/estates/: barbican_adapted.csv  barbican_raw.csv  golden_lane.csv
house_prices/output/: barbican-output copy.csv  barbican-output-test-F.csv  barbican-output.csv  golden-lane-output copy.csv  golden-lane-output-test-2-F.csv  golden-lane-output-test.csv  golden-lane-output.csv
house_prices/output-final/: all-prices.csv  all-prices.ods  barbican-output.csv  barbican-output.ods  golden-lane-output.csv  golden-lane-output.ods
house_prices/reference/: city-of-london.csv  england.csv  london.csv
house_prices/src/: main.rs
